"I have fixe the alignment issues for the about section so that it is responsive for mobile."

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 nav {
 	width: 100%;
 	display: flex;
@@ -9,4 +13,29 @@ nav {
 	justify-content: flex-start;
 	gap: 30px;
 	
+}
+
+.intro {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap-reverse;
+	gap: 50px;
+	align-items: center;
+}
+
+.intro-texts{
+	max-width: 500px;
+}
+
+.about-me {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 50px;
+	align-items: center;
+	
+}
+
+.about-me-text{
+	max-width: 500px;
 }
